tests/invalid/parameter_pack_default_not_supported.wio
fn Bad<Args...>(args: Args... = 0i32) -> i32 {
    return 0;
}
